# ggst-stats-website

./: .gitignore  CONTRIBUTORS.MD  CONTRIBUTORS.md  Cargo.toml  LICENSE  README  README.md  example.env
licenses/: halvnykterist
src/: caching.rs  characters.rs  ggst_api.rs  main.rs  requests.rs  responses.rs  website.rs
static/: base.css  chara.css  index.css  styles.css
templates/: Bridget.html  base.html  bridget.html  chara.html  index.html
