[package]
name = "ggst-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25", features=["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_derive = "1.0"
hex = "0.4.3"
dotenv = "0.15"
sqlx = {version = "*", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
chrono = "0.4"
askama = { version= "0.11", features = ["with-axum"] }
askama_axum = "0.2"
axum = "0.6"
tower-http = { version = "0.3", features = ["fs", "trace"] }
rustis = "0.8"
